Media Engagement: ignore prerender/preload navigations.

Prerender/preload navigations are not tagged as such in the
NavigationHandle, requiring us to explicitly check with the
PrerenderManager if we are running in such a context.

This should solve a cause for many fake visits.

Bug: 805918
Change-Id: I9b397822465086dcb97ca72e3e4d1df324cf324e